test_data/data_validation_tests_data/invalid_account_numbers_test_data/bank_export_iban_validation_test_new.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:f79a76fa846c067973d1793a3d09a76d0d4b84a363eaf220dce395db1f842531
size 5864
